tests/compile_fail/into/multiple_skip.stderr
error: only a single `#[into(skip)] attribute is allowed`
 --> tests/compile_fail/into/multiple_skip.rs:4:7
  |
4 |     #[into(skip)]
  |       ^^^^
